Partie base de données faite / Partie analyse en cours avec la bonne version ...

--- a/Statistique descriptive/TP 4/sujet_charge.ipynb
+++ b/Statistique descriptive/TP 4/sujet_charge.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "Objectifs de la séance : \n",
     "* Utiliser l'étape DATA afin de concaténer et fusionner des tables,\n",
-    "* Lire des tables dans un format différent de **sas7bdat**,\n",
+    "* Lire des tables dans un format différent de **sas7bdat** (en utilisant l'instruction INFILE, la procédure IMPORT ou les moteurs de l'instruction LIBNAME),\n",
     "* Utiliser des formats,\n",
     "* Réaliser une analyse univariée et une analyse bivariée.\n"
    ]
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\"Le RMS Titanic est un paquebot transatlantique britannique qui fait naufrage dans l'océan Atlantique Nord en 1912 à la suite d'une collision avec un iceberg, lors de son voyage inaugural de Southampton à New York. Entre 1 490 et 1 520 personnes trouvent la mort, ce qui fait de cet événement l'une des plus grandes catastrophes maritimes survenues en temps de paix et la plus grande pour l'époque.\" (Source : Wikipédia)\n",
+    ">Le RMS Titanic est un paquebot transatlantique britannique qui fait naufrage dans l'océan Atlantique Nord en 1912 à la suite d'une collision avec un iceberg, lors de son voyage inaugural de Southampton à New York. Entre 1 490 et 1 520 personnes trouvent la mort, ce qui fait de cet événement l'une des plus grandes catastrophes maritimes survenues en temps de paix et la plus grande pour l'époque. (Source : Wikipédia)\n",
     "\n",
     "Le but de ce TP est d'étudier les différences de caractériques entre les passagers et d'essayer de déterminer des profils particuliers parmi ceux qui ont survécu.\n",
     "\n",
@@ -93,7 +93,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Réponse** : Par défaut, le moteur utilisé dans l'instruction LIBNAME est le moteur V9 qui ne permet de lire que des tables crées dans une version postérieure à SAS 9.x.\n",
+    "Ici, il s'agit de fichiers au format *csv*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LIBNAME source \"/folders/myfolders/Donnees_TP_SAS/TP4\";\n",
+    "LIBNAME resultat \"/folders/myfolders/Donnees_TP_SAS/TP4\";"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Question 2** : À l'aide d'une étape DATA et des instructions INFILE et INPUT, créez les tables *donnees_c1* (à l'aide de la table titanic_client1.csv) et *donnees_c2* (à l'aide de la table titanic_client2.csv) dans la bibliothèque Work. On utilisera une étape DATA par table."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA donnees_C1;\n",
+    "INFILE \"/folders/myfolders/Donnees_TP_SAS/TP4/titanic_client1.csv\" FIRSTOBS = 2 DLM = \",\" DSD MISSOVER;\n",
+    "INPUT id $ Civilite $ Age EpouseFrat ParentsEnf;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA donnees_C2;\n",
+    "INFILE \"/folders/myfolders/Donnees_TP_SAS/TP4/titanic_client2.csv\"  FIRSTOBS = 2 DLM = \",\" DSD MISSOVER;\n",
+    "INPUT id $ Civilite $ Age EpouseFrat ParentsEnf;\n",
+    "RUN;"
    ]
   },
   {
@@ -104,6 +146,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC IMPORT DATAFILE = \"/folders/myfolders/Donnees_TP_SAS/TP4/titanic_client3.csv\" OUT = donnees_c3 DBMS = CSV;\n",
+    "DELIMITER = \",\";\n",
+    "RUN;"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -111,10 +164,42 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC CONTENTS DATA = donnees_c3;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Réponse** : L'identifiant *id* dans cette table est de longueur 5 alors qu'il est censé être de longueur 6 (car de la forme \"idxxxx\"). Il faut relancer une procédure IMPORT en utilisant GUESSINGROWS. De base, dans la procédure PROC IMPORT, SAS lit un certain nombre d'observations pour déterminer les longueurs des variables. Par exemple, si les deux premieres observations ont comme identifiant *id101* et *id102* alors SAS va assigner une longueur de 5 à cette variable même si la suivante est *id1000*.\n",
+    "\n",
+    "En utilisant l'instruction GUESSINGROWS, on peut lui indiquer le nombre de lignes à lire pour déterminer la longueur des variables."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "**Question** : Relancez la procédure IMPORT en utilisant l'instruction GUESSINGROWS."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC IMPORT DATAFILE = \"/folders/myfolders/Donnees_TP_SAS/TP4/titanic_client3.csv\" OUT = donnees_c3 DBMS = CSV REPLACE;\n",
+    "/* il est nécessaire d'ajouter l'option de procédure REPLACE pour écraser l'ancienne table */\n",
+    "DELIMITER = \",\";\n",
+    "GUESSINGROWS = 708; /* qui correspond au nombre d'observations de la table */\n",
+    "RUN;"
    ]
   },
   {
@@ -127,25 +212,79 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA source.donnees_client;\n",
+    "SET donnees_c1 donnees_c2 donnees_c3;\n",
+    "RUN;"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question** : Créez la bibliothèque donnees_p pointant vers le fichier *titanic_place.xlsx*. On utilisera le moteur XLSX.\n",
+    "**Question** : Créez la bibliothèque *donneesp* pointant vers le fichier *titanic_place.xlsx*. On utilisera le moteur XLSX.\n",
     "Puis à l'aide d'une étape DATA, créez une copie de la table dans la bibliothèque *source* qui nommera donnees_place."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "**Question** : La table donnees_place convient des doublons. Supprimez-les en utilisant une procédure SORT et l'option de procédure NODUPKEY."
+    "LIBNAME donneesp XLSX \"/folders/myfolders/Donnees_TP_SAS/TP4/titanic_place.xlsx\";\n",
+    "\n",
+    "DATA source.donnees_place;\n",
+    "SET donneesp.titanicplace;\n",
+    "RUN;"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question** : À l'aide d'une étape DATA, fusionnez les tables donnees_client et donnees_place. On utilisera la variable *id* comme clef. La table sera stockée dans la bibliothèque *source* et se nommera *titanic*."
+    "**Question** : La table donnees_client contient un doublon. Supprimez-le en utilisant une procédure SORT et l'option de procédure NODUPKEY."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC SORT DATA = source.donnees_client NODUPKEY;\n",
+    "BY id;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Réponse** : On lit dans la LOG que \"NOTE: 1 observations with duplicate key values were deleted.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : À l'aide d'une étape DATA, fusionnez les tables donnees_client et donnees_place. On utilisera la variable *id* comme clef et on ne gardera que les observations dont l'identifiant est présent dans les deux tables (en cours de BDR, on parle d'*inner join*). La table sera stockée dans la bibliothèque *source* et se nommera *titanic*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA source.titanic;\n",
+    "MERGE source.donnees_client(in=client) source.donnees_place(in=place);\n",
+    "IF client and place THEN OUTPUT;\n",
+    "RUN;"
    ]
   },
   {
@@ -158,6 +297,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC MEANS DATA = source.titanic NMISS;\n",
+    "VAR AGE;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA resultat.titanic_svm;\n",
+    "SET source.titanic;\n",
+    "IF NOT(MISSING(AGE)) THEN OUTPUT;\n",
+    "RUN;"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -165,13 +327,142 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA resultat.titanic_appur;\n",
+    "SET resultat.titanic_svm;\n",
+    "IF NOT(MISSING(AGE) | MISSING(CIVILITE) | MISSING(CLASSE) | MISSING(EPOUSEFRAT) | MISSING(PARENTSENF) | MISSING(PRIX) | MISSING(SURVIE)) THEN OUTPUT;\n",
+    "RUN;"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Question* : Créez un format qui associera pour chaque titre de civilité, le sexe de l'individu (\"Homme\" ou \"Femme\").\n",
+    "**Question** : Créez un format *$sexe* qui associera pour chaque titre de civilité, le sexe de l'individu (\"Homme\" ou \"Femme\").\n",
     "\n",
     "On fera les hypothèses suivantes : \n",
-    "*"
+    "\n",
+    "| Civilite |    Libellé   |        Hypothèse        |\n",
+    "|:--------:|:------------:|:-----------------------:|\n",
+    "|   ColM   |   Colonnel   |  Il s'agit que d'hommes |\n",
+    "|    DrF   |   Docteure   | Il s'agit que de femmes |\n",
+    "|    DrM   |    Docteur   |  Il s'agit que d'hommes |\n",
+    "|  Master  |    Maître    |  Il s'agit que d'hommes |\n",
+    "|   Miss   | Mademoiselle | Il s'agit que de femmes |\n",
+    "|    Mr    |   Monsieur   |  Il s'agit que d'hommes |\n",
+    "|    Mrs   |    Madame    | Il s'agit que de femmes |\n",
+    "|    Ms    |    Madame    | Il s'agit que de femmes |"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC FORMAT;\n",
+    "    VALUE $sexe\n",
+    "        \"ColM\" = \"Homme\"\n",
+    "        \"DrF\" = \"Femme\"\n",
+    "        \"DrM\" = \"Homme\"\n",
+    "        \"Master\" = \"Homme\"\n",
+    "        \"Miss\" = \"Femme\"\n",
+    "        \"Mr\" = \"Homme\"\n",
+    "        \"Mrs\" = \"Femme\"\n",
+    "        \"Ms\" = \"Femme\";\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : Ajoutez une variable sexe à la table titanic_appur de la bibliothèque *resultat* qui contiendra le sexe de chaque individu. On pourra utiliser le format *$sexe*."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA resultat.titanic_appur;\n",
+    "SET resultat.titanic_appur;\n",
+    "SEXE = PUT(Civilite, $sexe.);\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercice 2 : Analyse de la table *titanic_appur*"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : Combien d'individus ont survécu ? Quelle part de la population totale représentent ils ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC FREQ DATA = source.titanic_appur;\n",
+    "TABLE Survie;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : Quel est l'âge moyen des individus ? Donnez l'âge moyen par sexe également."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC MEANS DATA = source.titanic_appur MEAN;\n",
+    "VAR AGE;\n",
+    "CLASS SEXE;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : Donnez les quartiles de la distribution des prix des tickets ainsi que le minimum et le maximum. Rappelez la définition de la VAI et de la VAS. Donnez les valeurs extrêmes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC MEANS DATA = source.titanic_appur Q1 MEDIAN Q3 MIN MAX;\n",
+    "VAR PRIX;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Attention la variable PRIX a été codée en char et pas un numérique ..."
    ]
   }
  ],
