--- a/Statistique descriptive/TP 4/sujet_charge.ipynb
+++ b/Statistique descriptive/TP 4/sujet_charge.ipynb
@@ -272,6 +272,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Question** : Vérifiez le type de la variable Prix. Faites les modifications nécessaires."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC CONTENTS DATA = source.donnees_place;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA source.donnees_place;\n",
+    "SET source.donnees_place;\n",
+    "PRIX2 = INPUT(PRIX, BEST.);\n",
+    "DROP PRIX;\n",
+    "RENAME PRIX2 = PRIX;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Question** : À l'aide d'une étape DATA, fusionnez les tables donnees_client et donnees_place. On utilisera la variable *id* comme clef et on ne gardera que les observations dont l'identifiant est présent dans les deux tables (en cours de BDR, on parle d'*inner join*). La table sera stockée dans la bibliothèque *source* et se nommera *titanic*."
    ]
   },
@@ -407,7 +438,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Analyse univariée"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Question** : Combien d'individus ont survécu ? Quelle part de la population totale représentent ils ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Réponse** : Il y a 397 personnes qui ont survécu au nauffrage soit 38,1% des individus."
    ]
   },
   {
@@ -444,7 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Question** : Donnez les quartiles de la distribution des prix des tickets ainsi que le minimum et le maximum. Rappelez la définition de la VAI et de la VAS. Donnez les valeurs extrêmes."
+    "**Question** : Donnez les quartiles de la distribution des prix des tickets ainsi que le minimum et le maximum. Rappelez la définition de la VAI et de la VAS. Affichez les valeurs extrêmes."
    ]
   },
   {
@@ -459,10 +504,201 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC UNIVARIATE DATA = source.titanic_appur;\n",
+    "VAR PRIX;\n",
+    "RUN;"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Attention la variable PRIX a été codée en char et pas un numérique ..."
+    "Interquantile range : 20.00420\n",
+    "\n",
+    "Q1 - 1.5*(Q3-Q1) < 0 --> VAI = 0 \n",
+    "\n",
+    "Q3 + 1.5*(Q3-Q1) = 27.9 + 1.5*20 = 37.9 --> VAS = 38.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC MEANS DATA = source.titanic_appur MIN;\n",
+    "WHERE PRIX > 37.9;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Analyse bivariée"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : Utilisez un graphique pour mettre en lumière le lien entre le prix du ticket et la classe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC SGPLOT DATA = source.titanic_appur;\n",
+    "VBOX PRIX / CATEGORY = CLASSE;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : Quelle statistique peut-on utiliser pour quantifier ce lien ? On pourra utiliser la procédure ANOVA."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC ANOVA DATA = source.titanic_appur;\n",
+    "CLASS CLASSE;\n",
+    "MODEL PRIX = CLASSE;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Le rapport de corrélation correspond au $R^2$ ici."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : Donnez la proportion d'hommes parmi les 100 individus ayant payé leurs tickets le plus cher."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC SORT DATA = source.titanic_appur;\n",
+    "BY DESCENDING PRIX;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC FREQ DATA = source.titanic_appur(obs = 100);\n",
+    "TABLE SEXE;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : Commentez et vérifiez l'affirmation suivante \"Les femmes sont sur-représentées en première classe\" ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC FREQ DATA = source.titanic_appur;\n",
+    "TABLE SEXE * CLASSE;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : Analysez le lien entre la survie et la classe du passager. Ces deux variables vous semblent-elles indépendantes ? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC FREQ data = source.titanic_appur;\n",
+    "TABLE SURVIE * CLASSE / CHISQ;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : D'après vous, est-ce que l'impératif \"les femmes et les enfants d'abord\" a été respecté ? Pour répondre à cette question, on considèrera qu'un enfant est un individu âgé de 10 ans ou moins."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DATA titanic_appur_fe;\n",
+    "SET source.titanic_appur;\n",
+    "IF AGE < 10 OR SEXE = \"Femme\" THEN \n",
+    "    FEMME_ENFANTS = \"Oui\";\n",
+    "ELSE\n",
+    "    FEMME_ENFANTS = \"Non\";\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROC FREQ DATA = titanic_appur_fe;\n",
+    "TABLE FEMME_ENFANTS * SURVIE;\n",
+    "RUN;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : Analysez le lien entre la survie et le prix du ticket. Cette analyse vous semble t-elle redondante avec les questions précédentes ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question** : En utilisant la procédure FREQ, la variable Survie est considérée comme une variable qualitative dont les modalités sont 0 et 1. Supposons qu'à la place, on considère cette variable comme une variable numérique : à quoi correspond la moyenne arithmétique sur la population ? \n",
+    "\n",
+    "Supposons qu'on refasse l'analyse du lien entre la variable Survie et la variable CLASSE en utilisant Survie comme une variable numérique. Quelle méthode auriez-vous utiliser dans ce cas ? Comment interpréter les résultats ?"
    ]
   }
  ],
